--- a/src/views/users/userDetail.ejs
+++ b/src/views/users/userDetail.ejs
@@ -1,108 +1,118 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <%- include('../partials/head') %>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/userDetail.css">
+        <link rel="stylesheet" href="/stylesheets/styles.css">
+        <link rel="stylesheet" href="/stylesheets/userDetail.css">
 
 
 
-    <title>Playground-Jugueteria</title>
+        <title>Playground-Jugueteria</title>
 </head>
+
 <body>
     <!--Cabecera del sitio-->
 
     <%- include('../partials/header') %>
 
-    <!--Logo, buscador y carrito de compras-->
-    <main class="container-main">
-        
+        <!--Logo, buscador y carrito de compras-->
+        <main class="container-main">
+
             <a href="/">
-                <img src="/images/Logo/Logo.png"  alt="Logo Playground Jugueteria"></img>
+                <img src="/images/Logo/Logo.png" alt="Logo Playground Jugueteria"></img>
             </a>
-     
-        <div class="buscar-wrapper">
-            <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
-            <button type="button" class="fas fa-search" id="lupa"></button>
-        </div>
-        <div class="container-carrito">
-            <div class="carro">
-                <a href="/products/detail/1">
-                    <i class="fas fa-shopping-cart" id="icono-carrito">
-                        <div class="box-carrito"></div>
-                    </i>
-                </a>
+
+            <div class="buscar-wrapper">
+                <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
+                <button type="button" class="fas fa-search" id="lupa"></button>
             </div>
-        </div>
-    </main>
-    <!--Menú-->
-    <nav class="main-navbar">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#marcas">Marcas</a></li>
-            <li><a href="/products">Productos</a></li>
-            <li><a href="/users">Usuarios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="/users/profile">Perfil</a></li>
-        </ul>
-    </nav>
-    <!--Detalle de Producto seccion-->
-    <div class="container-detalle">
-        <div class="imagen">
-            <img class="imagenes" src="/images/Users/<%= user.image  %>"  alt=""></img>
-        </div>
+            <div class="container-carrito">
+                <div class="carro">
+                    <a href="/products/detail/1">
+                        <i class="fas fa-shopping-cart" id="icono-carrito">
+                            <div class="box-carrito"></div>
+                        </i>
+                    </a>
+                </div>
+            </div>
+        </main>
+        <!--Menú-->
+        <nav class="main-navbar">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="#marcas">Marcas</a></li>
+                <li><a href="/products">Productos</a></li>
+                <li><a href="/users">Usuarios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="/users/profile">Perfil</a></li>
+            </ul>
+        </nav>
+        <!--Detalle de Producto seccion-->
+        <div class="container-detalle">
+            <div class="imagen">
+                <img class="imagenes" src="/images/Users/<%= users.image  %>" alt=""></img>
+            </div>
             <div class="detalle">
-                <p class="id" >N° Usuario:<%= user.id %></p>
+                <p class="id">N° Usuario:<%= users.user_id %>
+                </p>
                 <br>
-                <p class="nombre" >Nombre:<%= user.first_name + " " +user.last_name %></p>
+                <p class="nombre">Nombre:<%= users.first_name + " " +users.last_name %>
+                </p>
                 <br>
                 <p class="email">Email:</p>
-                    <p><%= user.email  %></p>
+                <p>
+                    <%= users.email %>
+                </p>
                 <br>
                 <p class="tipo_usuario">Tipo de usuario:</p>
-                    
-                    <p><%= user.category %></p>
+                <p>
+                    <%= users.user_categories.Ucategory_name %>
+                </p>
+
                 <br>
-                  
-                <form action="/users/delete/<%= user.id %>?_method=DELETE" method="POST" >
-                    <input class="editar" onclick="location.href='/users/edit/<%= user.id %>'" type="button" value="Editar" >
+
+                <form action="/users/delete/<%= users.user_id %>?_method=DELETE" method="POST">
+                    <input class="editar" onclick="location.href='/users/edit/<%= users.user_id %>'" type="button"
+                        value="Editar">
                     <button type="submit" class="eliminar">Eliminar</button>
                 </form>
-            
-                    </div>
-             </div>
-        </div>
-    </div>
-    <div class="info-destacados">
-        <h3>
-            PRODUCTOS DESTACADOS
-        </h3>
-    </div>
-    <!--Productos Destacados-->
-    <section class="destacados">
-        <div class="destacados-box1">
-            <img src="/images/Products/destacado-frozen.jpeg" alt="Imagen frozen">
-            <img src="/images/Products/destacado-toyStory.jpeg" alt="Imagen toyStory">
-            <img src="/images/Products/destacado-spiderman.jpeg" alt="Imagen spiderman">
-            <img src="/images/Products/destacado-superman.jpeg" alt="Imagen superman">
-            <img src="/images/Products/destacado-starwars.jpeg" alt="Imagen star">
-            <a href="/productDetail">
-                <img src="/images/Products/muneca.jpg" alt="Imagen mariobros">
-            </a>
-            
-        </div>
-        <div class="destacados-box2">
-            
-        </div>
-    </section>
-    <!--Nuestras Marcas-->
-    <section id="marcas">
-       
-    
 
-    </section>
-      <!--Footer-->
-      <%- include('../partials/footer') %>
-      
+            </div>
+        </div>
+        </div>
+        </div>
+        <div class="info-destacados">
+            <h3>
+                PRODUCTOS DESTACADOS
+            </h3>
+        </div>
+        <!--Productos Destacados-->
+        <section class="destacados">
+            <div class="destacados-box1">
+                <img src="/images/Products/destacado-frozen.jpeg" alt="Imagen frozen">
+                <img src="/images/Products/destacado-toyStory.jpeg" alt="Imagen toyStory">
+                <img src="/images/Products/destacado-spiderman.jpeg" alt="Imagen spiderman">
+                <img src="/images/Products/destacado-superman.jpeg" alt="Imagen superman">
+                <img src="/images/Products/destacado-starwars.jpeg" alt="Imagen star">
+                <a href="/productDetail">
+                    <img src="/images/Products/muneca.jpg" alt="Imagen mariobros">
+                </a>
+
+            </div>
+            <div class="destacados-box2">
+
+            </div>
+        </section>
+        <!--Nuestras Marcas-->
+        <section id="marcas">
+
+
+
+        </section>
+        <!--Footer-->
+        <%- include('../partials/footer') %>
+
 </body>
+
 </html>
