--- a/src/views/users/usersEdit.ejs
+++ b/src/views/users/usersEdit.ejs
@@ -1,58 +1,62 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <%- include('../partials/head.ejs') %>
-    <link rel="stylesheet" href="/stylesheets/usersEdit.css">
+        <link rel="stylesheet" href="/stylesheets/usersEdit.css">
 
-    <title>Formulario registro</title>
+        <title>Formulario registro</title>
 </head>
+
 <body>
 
     <%- include('../partials/header.ejs') %>
 
 
-    <main class="container-main">
-        <a href="/">
-            <img src="/images/Logo/logo.png"  alt="Logo Playground Jugueteria"></img>
-        </a>
-       
-    </main>
+        <main class="container-main">
+            <a href="/">
+                <img src="/images/Logo/logo.png" alt="Logo Playground Jugueteria"></img>
+            </a>
 
-    
-    <form class="forms" action="/users/edit/<%= userToEdit.id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
+        </main>
 
-<div class="formulario">
 
-    <h2>Actualiza los datos</h2>
-    <label for="first_name">Nombre</label>
-    <input id="first_name" class="text" type="text" name="first_name" value=<%= userToEdit.first_name %> required>
+        <form class="forms" action="/users/edit/<%= User.user_id %>?_method=PATCH" method="POST"
+            enctype="multipart/form-data">
 
-    <label for="last_name">Apellido</label>
-    <input id="last_name" class="text" type="text" name="last_name" value=<%=userToEdit.last_name  %> required>
+            <div class="formulario">
 
-    <label for="email">E-mail</label>
-    <input id="email" class="text" type="email" name="email" value=<%= userToEdit.email  %> required>
+                <h2>Actualiza los datos</h2>
+                <label for="first_name">Nombre</label>
+                <input id="first_name" class="text" type="text" name="first_name" value=<%=User.first_name %> required>
 
-    <label for="password">Contraseña</label>
-    <input id="password" class="text" type="password" name="password" required>
+                <label for="last_name">Apellido</label>
+                <input id="last_name" class="text" type="text" name="last_name" value=<%=User.last_name %> required>
 
-    <label for="imagenUsuario">Imagen de perfil</label>
-    <input type="file" name="imagenUsuario" id="imagenUsuario">
+                <label for="email">E-mail</label>
+                <input id="email" class="text" type="email" name="email" value=<%=User.email %> required>
 
-    <!-- <label>Repetir contraseña</label>
+                <label for="password">Contraseña</label>
+                <input id="password" class="text" type="password" name="password" required>
+
+                <label for="imagenUsuario">Imagen de perfil</label>
+                <input type="file" name="imagenUsuario" id="imagenUsuario">
+
+                <!-- <label>Repetir contraseña</label>
     <input class="text" type="password" name="contraseña" required> -->
-    <input class="boton" type="submit" value="Aceptar">
+                <input class="boton" type="submit" value="Aceptar">
 
-    </form>
-</div>
+        </form>
+        </div>
 
 
-<%- include('../partials/slider_dinamico.ejs') %>
+        <%- include('../partials/slider_dinamico.ejs') %>
 
-     <!--Footer-->
+            <!--Footer-->
 
-     <%- include('../partials/footer.ejs') %>
-    
-    
+            <%- include('../partials/footer.ejs') %>
+
+
 </body>
+
 </html>
