Cambio de BD a MySql - WEB 2.0

--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -17,8 +17,8 @@
         <a href="/products/detail/<%= products.id %>">
           <article>
             <div class="imgen-contenedor">
-              <!-- <img src="/images/Products/<%= products.imagen %>" alt="" /> -->
-              <img src="https://picsum.photos/500/300/?image=5" alt="" />
+              <img src="/images/Products/<%= products.imagen %>" alt="" />
+              <!-- <img src="https://picsum.photos/500/300/?image=5" alt="" /> -->
             </div>
             <ul class="info-box">
               <li><h3 class=""><%= products.titulo %></h3></li>
