--- a/src/views/products/formCreate.ejs
+++ b/src/views/products/formCreate.ejs
@@ -13,7 +13,7 @@
     <%- include('../partials/navbar.ejs') %>
 
     <div class="container-product-create">
-        <form action="/products" method="POST">
+        <form action="/products" method="POST" enctype="multipart/form-data">
             <div class="container-create">
                 <div class="card">
                     <div class="card-header">
@@ -46,6 +46,8 @@
                              required
                              />
                          </div>
+                         <label for="imagenProducto">Imagen del producto</label>
+                         <input type="file" name="imagenProducto" id="imagenProducto" />
                       
                     </div>
                     <input class="button" type="submit" value="GUARDAR" />
