--- a/src/views/users/users.ejs
+++ b/src/views/users/users.ejs
@@ -13,30 +13,30 @@
     <div class="contenedor-principal-usuarios">
       <div class="container-titulo">
         <h1 class="titulo">LISTA DE USUARIOS REGISTRADOS</h1>
-        <input
+        <!-- <input
           class="button"
           type="button"
           onclick="location.href='/users/register'"
           value="Crear nuevo usuario"
-        />
+        /> -->
       </div>
 
       <div class="contenedor_principal">
         <div class="lista-atributos-usuario">
-          <% users.forEach(function(users) { %>
-          <a href="/users/detail/<%= users.id %>">
+          <% allUsers.forEach(function(allUsers) { %>
+          <a href="/users/detail/<%= allUsers.user_id %>">
             <div class="card-img">
               <div class="imagen-usuario">
-                <img src="/images/Users/<%= users.image %>" alt="" />
+                <img src="/images/Users/<%= allUsers.image %>" alt="" />
               </div>
               <ul>
                 <div class="nombre-usuario-card">
-                  <li><h3><%= users.first_name %></h3></li>
-                  <li><h3><%= users.last_name %></h3></li>
+                  <li><h3><%= allUsers.first_name %></h3></li>
+                  <li><h3><%= allUsers.last_name %></h3></li>
                 </div>
                 <div class="detalle-usuario">
-                  <li><i class="fa fa-envelope"></i><%= users.email %></li>
-                  <li>Tipo de usuario: $<%= users.category %></li>
+                  <li><i class="fa fa-envelope"></i><%= allUsers.email %></li>
+                  <!-- <li>Tipo de usuario: $<%= allUsers.category %></li> -->
                 </div>
               </ul>
             </div>
