--- a/src/views/users/usersEdit.ejs
+++ b/src/views/users/usersEdit.ejs
@@ -11,11 +11,11 @@
 <body>
     <%- include('../partials/navbar.ejs') %>
 
-<form class="forms" action="/users/edit/<%= userToEdit.id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
+<form class="forms" action="/users/edit/<%= User.user_id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
 <div class="card">
      <div class="container-profile">
 
-        <h1 class="title">Perfíl de usuario # <%= userLocal.id %></h1>
+        <h1 class="title">Perfíl de usuario # <%= User.user_id %></h1>
 
         <div class="imagen-avatar">
             <img src="/images/Users/<%= userLocal.image %>"  alt="imagen de usuario"></img>
@@ -24,17 +24,17 @@
         <div class="grid">
             <div class="form-group a">
                 <label for="first_name">Nombre</label>
-                <input id="first_name" class="text" type="text" name="first_name" value=<%= userToEdit.first_name %> required> 
+                <input id="first_name" class="text" type="text" name="first_name" value=<%= User.first_name %> required> 
             </div>
     
             <div class="form-group b">
                 <label for="last_name">Apellido</label>
-                 <input id="last_name" class="text" type="text" name="last_name" value=<%=userToEdit.last_name  %> required> 
+                 <input id="last_name" class="text" type="text" name="last_name" value=<%=User.last_name  %> required> 
             </div>
     
             <div class="form-group email-group">
                 <label for="email">E-mail</label>
-                <input id="email" class="text" type="email" name="email" value=<%= userToEdit.email  %> required>
+                <input id="email" class="text" type="email" name="email" value=<%= User.email  %> required>
             </div>
     
             <div class="form-group phone-group">
