--- a/src/views/products/formCreate.ejs
+++ b/src/views/products/formCreate.ejs
@@ -5,6 +5,8 @@
     <%- include('../partials/head.ejs') %>
         <link rel="stylesheet" href="/stylesheets/login.css">
         <link rel="stylesheet" href="/stylesheets/formCreate.css">
+        <script defer src="/javascripts/validatorProducts.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
         <title>Formulario ingreso</title>
 </head>
@@ -34,16 +36,19 @@
 
         <form class="Formulario" action="/products" method="POST" enctype="multipart/form-data">
 
-
-            <div class="formato">
+           <div class="formato">
 
                 <div>
                     <label for="titulo" class="lnombre">Nombre del producto:</label>
                     <input type="text" id="titulo" name="titulo" class="nombre">
+                  
+                    
                 </div>
                 <div class="">
                     <label for="precio" class="lprecio">Precio del producto:</label>
                     <input type="number" id="precio" name="precio" class="precio">
+                 
+                    
                 </div>
 
             </div>
@@ -51,8 +56,8 @@
             <div>
                 <label for="descripcionCorta" class="ldescripcion">Descripción:</label>
                 <input type="text" id="descripcionCorta" name="descripcionCorta" class="descripcion">
+                
             </div>
-
 
 
             <div class="formato">
