--- a/src/views/products/formCreate.ejs
+++ b/src/views/products/formCreate.ejs
@@ -41,13 +41,23 @@
                 <div>
                     <label for="titulo" class="lnombre">Nombre del producto:</label>
                     <input type="text" id="titulo" name="titulo" class="nombre">
-                  
+                    <% if(locals.errorsproducts && locals.errorsproducts.titulo){ %>
+                        <span>
+                            <%= errorsproducts.titulo.msg %>
+                        </span>
+
+                        <% } %>
                     
                 </div>
                 <div class="">
                     <label for="precio" class="lprecio">Precio del producto:</label>
                     <input type="number" id="precio" name="precio" class="precio">
-                 
+                    <% if(locals.errorsproducts && locals.errorsproducts.precio){ %>
+                        <span>
+                            <%= errorsproducts.precio.msg %>
+                        </span>
+
+                        <% } %>
                     
                 </div>
 
@@ -56,7 +66,12 @@
             <div>
                 <label for="descripcionCorta" class="ldescripcion">Descripción:</label>
                 <input type="text" id="descripcionCorta" name="descripcionCorta" class="descripcion">
-                
+                <% if(locals.errorsproducts && locals.errorsproducts.descripcionCorta){ %>
+                    <span>
+                        <%= errorsproducts.descripcionCorta.msg %>
+                    </span>
+
+                    <% } %>
             </div>
 
 
