--- a/src/views/products/productsEdit.ejs
+++ b/src/views/products/productsEdit.ejs
@@ -5,6 +5,8 @@
     <%- include('../partials/head.ejs') %>
         <link rel="stylesheet" href="/stylesheets/login.css">
         <link rel="stylesheet" href="/stylesheets/productsEdit.css">
+        <script defer src="/javascripts/validatorProducts.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
         <title>Formulario ingreso</title>
 </head>
@@ -32,27 +34,44 @@
         </nav>
         </div>
 
-        <form class="Formulario" action="/products/edit/<%= Product.product_id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
+        <form class="Formulario" action="/products/edit/<%= Product.product_id %>?_method=PATCH" method="POST"
+            enctype="multipart/form-data">
 
 
             <div class="formato">
 
                 <div>
                     <label for="titulo" class="lnombre">Nombre del producto:</label>
-                    <input type="text" id="titulo" name="titulo" value="<%= Product.title %>" required class="nombre">
+                    <input type="text" id="titulo" name="titulo" value="<%= Product.title %>"  class="nombre">
+                    <% if(locals.errorsproducts && locals.errorsproducts.titulo){ %>
+                        <span>
+                            <%= errorsproducts.titulo.msg %>
+                        </span>
+
+                        <% } %>
                 </div>
                 <div class="">
                     <label for="precio" class="lprecio">Precio del producto:</label>
-                    <input type="number" id="precio" name="precio" value="<%= Product.price  %>" required
-                        class="precio">
+                    <input type="number" id="precio" name="precio" value="<%= Product.price  %>"  class="precio">
+                    <% if(locals.errorsproducts && locals.errorsproducts.precio){ %>
+                        <span>
+                            <%= errorsproducts.precio.msg %>
+                        </span>
+
+                        <% } %>
                 </div>
 
             </div>
 
             <div>
                 <label for="descripcionCorta" class="ldescripcion">Descripción:</label>
-                <input type="text" id="descripcionCorta" name="descripcionCorta" value="<%= Product.description %>"
-                    required class="descripcion">
+                <input type="text" id="descripcionCorta" name="descripcionCorta" value="<%= Product.description %>"  class="descripcion">
+                <% if(locals.errorsproducts && locals.errorsproducts.descripcionCorta){ %>
+                    <span>
+                        <%= errorsproducts.descripcionCorta.msg %>
+                    </span>
+
+                    <% } %>
             </div>
 
             <div class="formato">
