--- a/public/stylesheets/formCreate.css
+++ b/public/stylesheets/formCreate.css
@@ -1,11 +1,11 @@
 
 
 .container-create {
-    background-color:rgb(116, 116, 116);
+    background-color:rgb(216, 216, 216);
     display: flex;
     justify-content:center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 .card {
     display:inline-flex;
@@ -17,7 +17,10 @@
     margin: 1em;
     background-color: white;
     border-radius: 5px;
-   
+    background: linear-gradient(#fff, #fff) padding-box,
+              linear-gradient(45deg, slateblue, rgb(58, 127, 246)) border-box;
+  border: 5px solid transparent;
+  border-radius: 10px; 
 }
 .card-header {
     display: inline-flex;
@@ -42,6 +45,7 @@
     margin: 1em;
     background-color: rgb(223, 223, 223);
     border-radius: 5px;
+    
 }
 .input-nombre {
     display: inline-block;
@@ -88,6 +92,13 @@
 .input-descripcion:focus {
     border-radius: lightblue;
 }
+.img-insert {
+    display: inline-flex;
+    margin: 15px;
+}
+.img-insert input {
+    margin: 0px 15px;
+}
 .button {
     display: inline-block;
     justify-content: center;
@@ -100,7 +111,7 @@
 	border-radius: 6px;
 	color: white;
 	width: 30%;
-	
+	margin: 20px;
 }
 .button:hover {
 	background: #6e67ee;
