--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login</title>
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap"
-      rel="stylesheet"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="/stylesheets/loginAndRegister.css" />
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script defer src="/javascripts/validatorLogin.js"></script>
+    <script defer src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <title>Login</title>
   </head>
   <body>
     <img class="wave" src="/icons/fondo-login.png" />
@@ -38,9 +36,12 @@
                 class="input"
                 placeholder="email"
               />
-              <% if(locals.errorsLogin && locals.errorsLogin.email){ %>
-              <span> <%= locals.errorsLogin.email.msg %> </span>
-              <% } %>
+                <% if(locals.errorsLogin && locals.errorsLogin.email){ %>
+                  <span>
+                      <%= locals.errorsLogin.email.msg %>
+                  </span>
+
+                <% } %>
             </div>
           </div>
           <div class="input-div pass">
@@ -55,9 +56,11 @@
                 class="input"
                 placeholder="password"
               />
-              <% if(locals.errorsLogin && locals.errorsLogin.password){ %>
-              <span> <%= locals.errorsLogin.password.msg %> </span>
-              <% } %>
+                <% if(locals.errorsLogin && locals.errorsLogin.password){ %>
+                  <span>
+                      <%= locals.errorsLogin.password.msg %>
+                  </span>
+                <% } %>
             </div>
           </div>
           <div class="container-recordar">
