--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,7 +19,7 @@
 
                     <% if(locals.userLocal){ %>
 
-                        <form action="/users/logout" method="post">
+                        <form class="cerrar" action="/users/logout" method="post">
                             <button type="submit">Cerrar sesion</button>
                         </form>
                         <p class="userLogin">
